[gd_scene load_steps=5 format=3 uid="uid://d1yxlkjs5e6k3"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_lbbmx"]

[sub_resource type="LabelSettings" id="LabelSettings_db6wb"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_m1amk"]

[sub_resource type="LabelSettings" id="LabelSettings_kw578"]
font_size = 36

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbbmx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -156.0
offset_right = 337.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Defeated"
label_settings = SubResource("LabelSettings_db6wb")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Energian forces have managed to overpower your fleet"
label_settings = SubResource("LabelSettings_m1amk")
horizontal_alignment = 1

[node name="ScoreContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_stretch_ratio = 2.0
text = "Score: 99999"
label_settings = SubResource("LabelSettings_kw578")
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 36
text = "Play again"
